updated local file

--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,7 @@
 
     <header class="vcard">
     	<h1 class="fn">Chitrank Umarania</h1>
+        <h1 class="fn">Harsh Patel</h1>
         <h2 class="role">Front-End Developer &amp; Web Designer</h2>
     	<ul class="contact">
         	<li class="email">joaopar@gmail.com</li>
