--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,8 @@
 <body>
 
     <header class="vcard">
-    	<h1 class="fn">Chitrank Umarania</h1>
+        <h1 class="fn">Chitrank Umarania</h1>
+        <h1 class="fn">Veer Fadia</h1>
         <h2 class="role">Front-End Developer &amp; Web Designer</h2>
     	<ul class="contact">
         	<li class="email">joaopar@gmail.com</li>
