local file updated

--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
 <body>
 
     <header class="vcard">
-        <h1 class="fn">Chitrank Umarania </h1>
+        <h1 class="fn">Chitrank Umarania is computer engineer </h1>
         <h1 class="fn">harsh patel </h1>
         <h2 class="role">Front-End Developer &amp; Web Designer</h2>
     	<ul class="contact">
